--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "playground-hacker-news",
+  "homepage": "https://mrkosima.github.io/playground-hacker-news/",
   "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mrkosima/playground-hacker-news.git"
+  },
+  "license": "MIT",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
